[CODEREVIEW][SONAR] NotificationLoader - added NOSONAR on using method ref. that would break readability